<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAG</string>
    <string name="action_logout">更换帐号</string>
    <string name="action_about_app">关于与建议</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="login_input_user_name">请输入名字</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="edit">编辑</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_forget_password">忘记用户名或密码？</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">注册成功</string>
    <string name="main_view_person_title">我的成就</string>
    <string name="main_view_anytime_title">正在做</string>
    <string name="action_logout_alert_message">确定更换账号么？之前保留的账号信息将被删除。</string>
    <string name="action_about_app_text">关于作者:\n\thi，大家好，我是“孤独的猫咪神”。\n\t我的微博是:weibo.com/maomishen\n\t感谢您使用此APP。欢迎对本APP提出您宝贵的意见和建议。</string>
    <string name="action_about_app_doing_list_title">我希望在“正在做”中，加入如下的事情:\n我要提意见:</string>
    <string name="action_about_app_submit_doing">提交</string>
    <string name="action_about_app_submit_doing_hint">输入意见或希望添加在“正在做”中的内容。</string>
    <string name="action_about_app_submit_message_success">感谢您的提交。祝您生活愉快。</string>
    <string name="action_about_app_submit_message_error">非常抱歉，提交出错。</string>
    <string name="person_register_time">注册时间:{0}</string>
    <string name="person_achievement_list_null">暂无成就</string>
    <string name="doing_list_wait_loading">正在加载</string>
    <string name="doing_list_error_loading">加载错误，请检查网络</string>
    <string name="doing_detail_loading">努力查询中！</string>
    <string name="doing_detail_same_time_title">与您同时在{0}的人有</string>
    <string name="doing_detail_person">人</string>
    <string name="doing_detail_get_achievement_title">本次获得的成就</string>
    <string name="doing_detail_achievement_null">没有获得成就T.T</string>
    <string name="descr_image">Image</string>
    <string name="copy_name">作品名称</string>
    <string name="copy_material">材质</string>
    <string name="copy_size">size</string>
    <string name="copy_size_unit">cm</string>
    <string name="copy_date">date</string>
    <string name="copy_description">description</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="original_real_code">原作防伪代码</string>
    <string name="activate_real_code">激活防伪代码</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="default_copy_size">100 cm</string>
    <string name="default_copy_money">0</string>
    <string name="default_real_code">00000000</string>
    <string name="product_report">product report</string>
    <string name="product_report_title">product analysis report</string>
    <string name="exhibision">exhibision</string>
    <string name="more_analysis">"more analysis"</string>
    <string name="browse">浏览</string>
    <string name="scan">扫描</string>
    <string name="weixin">微信</string>
    <string name="phone">电话</string>
    <string name="email">电子邮箱</string>
    <string name="cancel_send">取消</string>
    <string name="ok_send">发送</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="no_name_message">请输入作品名称!</string>
    
    <string name="add">+</string>
        <string name="remove">-</string>
        
    <!-- from board example -->
    <string name="sStatusPlugin">Welcome</string>
    <string name="sStatusPlugout">You are not connected to the device!</string>
    <string name="sDate">2012\–\08\–\23 Thur.</string>
    
    <string name="no_scanner_detected">未检测到探测器</string>
    <string name="connect_scanner">请连接探测器</string>
    <string name="real_code_correct">防伪标签正常</string>
    <string name="set_product_name">设置作品名称</string>
    
    <string name="please_press_scan">请按扫描开始</string>
    <string name="other">其他</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="about">关于</string>
    <string name="btnQuery">&gt;&gt;&gt;&gt;Start&lt;&lt;&lt;&lt;</string>
    
    <string name="signature">设置签名</string>
    <string name="self_description">个人简介</string>
    
        <string name="type1">类型1</string>
            <string name="type2">类型2</string>
     <string name="type3">类型3</string>
      <string name="type4">类型4</string>
       <string name="type5">类型5</string>
        <string name="type6">类型6</string>
         <string name="type7">类型7</string>
          <string name="type8">类型8</string>
           
<string name="lblEPC">No　　EPC Data</string>
    <string name="btnClear">Clean</string>
    <string name="sTotal">Total：0</string>
    <string name="lblTimes">Times</string>
    <string name="shortzero">00</string>
    <string name="zero">0000</string>
    <string name="longzero">00000000</string>
    <string name="lzero">0000000000</string>
    <string name="password">Access Password(HEX)</string>
    <string name="address">Start Address</string>
    <string name="memory">Memory Block</string>
    <string name="length">Length(WORD)</string>
    <string name="data">Tag Data(HEX)</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="lock">Lock</string>
    <string name="kill">Kill</string>
    <string name="mask">Lock Object</string>
    <string name="action">Lock Action</string>
    <string name="target_memory">Memory Address</string>
    <string name="lockobject">Lock Object</string>
    <string name="lockaction">Lock Action</string>
    <string name="password3">Kill Password</string>
    <string name="battery">Battery：</string>
    <string name="btnGet">Get</string>
    <string name="btnSet">Set</string>
    <string name="beep">Beep：</string>
    <string name="open">On</string>
    <string name="close">Off</string>
    <string name="sEPC">EPC:</string>
    <string name="sTID">TID</string>
    <string name="sSection">Work Region：</string>
    <string name="sSection1">Work Region</string>

</resources>